[package]
name = "progpool"
version = "0.2.2"
authors = ["Josh Gao <josh@jmgao.dev>"]
edition = "2018"
description = "Job pool with terminal progress bar"
readme = "README.md"
repository = "https://github.com/jmgao/progpool"
license = "Apache-2.0"

[dependencies]
indicatif = "0.16.2"
rayon = "^1.10.0"

tracing = "^0.1.40"
